--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 
                     <ul>
                         <li {{ paginator.previous is empty ? 'class="noprevnext"' : '' }}>
-                            <a id="prev_page_link" title="Plus récents" href="{{ paginator.previous }}">
+                            <a id="prev_page_link" title="Plus récents" href="{{ base_url }}/{{ paginator.previous }}">
                                 <i class="fa fa-clock-o"></i><i class="fa fa-angle-right"></i>
                             </a>
                         </li>
                             
                         {% for i in 0..paginator.pages|length -1 %}
                             {% if i == paginator.offset %}
-                                <li class="pi pi_a"><a href="/?page={{ i }}" class="page_item page_active"><i class="fa fa-clock-o"></i><span>{{ i }}</span></a></li>
+                                <li class="pi pi_a"><a href="{{ base_url }}/?page={{ i }}" class="page_item page_active"><i class="fa fa-clock-o"></i><span>{{ i }}</span></a></li>
                             {% else %}
-                                <li class="pi"><a href="/?page={{ i }}" class="page_item">{{ i }}</a></li>
+                                <li class="pi"><a href="{{ base_url }}/?page={{ i }}" class="page_item">{{ i }}</a></li>
                             {% endif %}
                         {% endfor %}
 
-                        <li {{ paginator.next is empty ? 'class="noprevnext"' : '' }}><a id="next_page_link" title="Plus anciens" href="{{ paginator.next }}"><i class="fa fa-angle-left"></i><i class="fa fa-clock-o"></i></a></li>
+                        <li {{ paginator.next is empty ? 'class="noprevnext"' : '' }}><a id="next_page_link" title="Plus anciens" href="{{ base_url }}/{{ paginator.next }}"><i class="fa fa-angle-left"></i><i class="fa fa-clock-o"></i></a></li>
                     </ul>
                     
                 </div>
